--- a/example/index.html
+++ b/example/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
   <title>Oscilloscope</title>
   <style>
   body {
@@ -16,10 +14,11 @@
   </style>
 </head>
 <body>
-  <canvas class="visualizer"></canvas>
+  <!--<audio controls>
+    <source src="loading.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>-->
 
-  <!--script src="../oscilloscope.min.js"></script-->
-  <!--script src="main.js"></script-->
   <script src="bundle.js"></script>
 </body>
 </html>
