organize and fix examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,22 +3,21 @@
 <head>
   <title>Oscilloscope</title>
   <style>
-  body {
-    background-color: #1a1a1a;
-    color: #dddddd;
-    margin: 0;
-  }
-  canvas {
-    display: block;
-  }
+    body {
+      margin: 0;
+      background-color: #1a1a1a;
+      color: #dddddd;
+    }
+    canvas {
+      display: block;
+    }
   </style>
 </head>
 <body>
-  <!--<audio controls>
-    <source src="loading.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>-->
-
-  <script src="bundle.js"></script>
+  <script src="../oscilloscope.min.js"></script>
+  <!-- Examples -->
+  <script src="audio-element.js"></script>
+  <!-- <script src="microphone.js"></script> -->
+  <!-- <script src="custom.js"></script> -->
 </body>
 </html>
