update build system

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,10 +14,10 @@
   </style>
 </head>
 <body>
-  <script src="../oscilloscope.min.js"></script>
+  <script src="../dist/oscilloscope.min.js"></script>
   <!-- Examples -->
-  <script src="audio-element.js"></script>
-  <!-- <script src="microphone.js"></script> -->
+  <script src="microphone.js"></script>
+  <!-- <script src="audio-element.js"></script> -->
   <!-- <script src="custom.js"></script> -->
 </body>
 </html>
