add oscilloscope.umd.js to example folder

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <button>Start Example</button>
-  <script src="../dist/oscilloscope.umd.js"></script>
+  <script src="oscilloscope.umd.js"></script>
 
   <!-- Examples -->
   <script src="microphone.js"></script>
