update example path

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <button>Start Example</button>
-  <script src="oscilloscope.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/oscilloscope@1.x/dist/oscilloscope.min.js"></script>
 
   <!-- Examples -->
   <script src="microphone.js"></script>
